tests/invalid/structure/no-edxml-root.edxml
<?xml version="1.0" encoding="UTF-8"?>
<!--
Testing event structure validation, verify
if EDXML data without an <edxml> root tag is rejected
-->
<test/>
